# CodeWorm

./: .env.example  .gitignore  .style.yapf  README.md  compose.yml  dev.compose.yml  justfile  pyproject.toml
codeworm/: __init__.py  cli.py  daemon.py  models.py
codeworm/analysis/: __init__.py  analyzer.py  complexity.py  parser.py  scanner.py  scoring.py  targets.py
codeworm/core/: __init__.py  config.py  events.py  logging.py  notifier.py  state.py
codeworm/git/: __init__.py  ops.py
codeworm/llm/: __init__.py  client.py  generator.py  prompts.py
codeworm/scheduler/: __init__.py  scheduler.py
config/: config.example.yaml  config.yaml  prompts.yaml  repos.yaml
dashboard/: __init__.py
dashboard/backend/: __init__.py  api.py  app.py  models.py  ws.py
dashboard/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/frontend/src/: App.tsx  config.ts  main.tsx  styles.scss
dashboard/frontend/src/api/: index.ts
dashboard/frontend/src/api/hooks/: index.ts  useActivity.ts  useRecent.ts  useRepos.ts  useStats.ts  useWebSocket.ts
dashboard/frontend/src/api/types/: dashboard.types.ts  index.ts
dashboard/frontend/src/components/: index.ts
dashboard/frontend/src/components/commit-feed/: commit-feed.module.scss  commit-feed.tsx  index.ts
dashboard/frontend/src/components/current-activity/: current-activity.module.scss  current-activity.tsx  index.ts
dashboard/frontend/src/components/live-log/: index.ts  live-log.module.scss  live-log.tsx
dashboard/frontend/src/components/stats-panel/: index.ts  stats-panel.module.scss  stats-panel.tsx
dashboard/frontend/src/components/worm-viz/: index.ts  worm-viz.module.scss  worm-viz.tsx
dashboard/frontend/src/core/api/: api.config.ts  index.ts  query.config.ts
dashboard/frontend/src/core/app/: routers.tsx  shell.module.scss  shell.tsx  toast.module.scss
dashboard/frontend/src/core/lib/: dashboard.store.ts  index.ts  shell.ui.store.ts
dashboard/frontend/src/pages/dashboard/: dashboard.module.scss  dashboard.tsx  index.ts
dashboard/frontend/src/pages/repos/: index.ts  repos.module.scss  repos.tsx
dashboard/frontend/src/styles/: _fonts.scss  _index.scss  _mixins.scss  _reset.scss  _tokens.scss
infra/docker/: dashboard.dev  dashboard.prod  frontend-builder.prod  vite.dev
infra/nginx/: dev.nginx  nginx.conf  nginx.prod.conf  prod.nginx
scripts/: install.sh  setup_docker.sh  setup_ollama.sh  start.sh
systemd/: codeworm-user.service  codeworm.service
