[project]
name = "codeworm"
version = "0.1.0"
description = "Autonomous code documentation agent that intelligently curates and documents your code using local LLMs"
authors = [
    {name = "Carter Perez", email = "cartertechsolution@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["documentation", "automation", "llm", "ollama", "git", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",    
    "Programming Language :: Python :: 3.14",    
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "ollama>=0.6.1",
    "GitPython>=3.1.46",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "lizard>=1.19.0",
    "APScheduler>=3.11.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.19.0",
    "pathspec>=0.12.0",
    "structlog>=24.1.0",
    "orjson>=3.9.0",
    "python-dotenv>=1.2.1",
    "click>=8.3.1",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "black>=25.12.0",
    "ruff>=0.14.11",
    "mypy>=1.19.1",
    "types-pyyaml>=6.0.12.20250915",
]

[project.urls]
Homepage = "https://github.com/CarterPerez-dev/CodeWorm"
Documentation = "https://github.com/CarterPerez-dev/CodeWorm#readme"
Repository = "https://github.com/CarterPerez-dev/CodeWorm"
Issues = "https://github.com/CarterPerez-dev/CodeWorm/issues"

[project.scripts]
codeworm = "codeworm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codeworm"]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C4", "UP", "ARG", "SIM", "PTH", "RUF", "S", "N"]
ignore = ["E501", "B008", "S101", "ARG001"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=codeworm",
]

[tool.coverage.run]
source = ["codeworm"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
